<package format="3">
  <name>gazebo_joint_torsional_spring_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo plugin for adding torsional spring to joints</description>
  <maintainer email="dancher.00@gmail.com">dancher00</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>